crates/api-snowflake-rest/src/tests/snapshots/snowflake_compatibility/api_snowflake_rest__tests__test_sqls__snowflake_compatibility__select_1_async.snap
---
source: crates/api-snowflake-rest/src/tests/test_sqls.rs
description: "select 1;>\nQuery UUID: 00000000-0000-0000-0000-077ef7448873"
expression: snapshot
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "queryId": "UUID"
  },
  "success": true,
  "message": "successfully executed",
  "code": null
}
