crates/api-snowflake-rest/src/tests/snapshots/snowflake_compatibility/api_snowflake_rest__tests__test_sqls__snowflake_compatibility__select_from_missing_table.snap
---
source: crates/api-snowflake-rest/src/tests/test_sqls.rs
description: "select * from foo\nQuery UUID: 00000000-0000-0000-0000-077ef7421800"
expression: snapshot
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "errorCode": "002003",
    "sqlState": "42000",
    "queryId": "UUID"
  },
  "success": false,
  "message": "SQL compilation error: table 'embucket.public.foo' not found",
  "code": "002003"
}
