crates/api-snowflake-rest/src/tests/snapshots/snowflake_compatibility/api_snowflake_rest__tests__test_sqls__snowflake_compatibility__show_schemas_in_missing_db.snap
---
source: crates/api-snowflake-rest/src/tests/test_sqls.rs
description: "show schemas in database foo\nQuery UUID: 00000000-0000-0000-0000-077ef7448875"
expression: snapshot
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "errorCode": "002043",
    "sqlState": "42502",
    "queryId": "UUID"
  },
  "success": false,
  "message": "SQL compilation error: Database 'foo' does not exist or not authorized",
  "code": "002043"
}
